/*
 *  Copyright 2016 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

option java_package = "com.google.android.apps.forscience.whistlepunk.data";
option java_outer_classname = "GoosciScalarInput";
option optimize_for = LITE_RUNTIME;

message ScalarInputConfig {
    // The package name of the service providing the input sensor
    optional string service_id = 1;

    // A service-specific address identifying this sensor
    optional string address = 2;

    // TODO: document on down
    optional int32 icon_id = 3 [default = -1];

    optional string units = 4 [default = ""];

    optional string short_description = 5 [default = ""];
}